Fix background pseudo-element visibility
- Added pointer-events: none to allow clicks through background
- Changed width to 100vw for better viewport coverage
- Background images should now be visible on all devices

--- a/webapp/static/css/style.css
+++ b/webapp/static/css/style.css
@@ -103,13 +103,14 @@ body::before {
     position: fixed;
     top: 0;
     left: 0;
-    width: 100%;
+    width: 100vw;
     height: 100vh;
     background-image: url('../images/background_day.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
     z-index: -1;
+    pointer-events: none;
 }
 
 /* Dark theme background */
